syntax = "proto3";

option csharp_namespace = "PersistenceDataAccess";

package customer;

message CustomerRequest {
  int32 id = 1;
}

message UserModelResponseCustomer{
  int32 Id = 1;
  string firstName = 2;
  string lastName = 3;
  AddressModelCustomer address = 4;
  int32 phoneNumber = 5;
  string email = 6;
}

message AddressModelCustomer{
  string city = 1;
  string streetName = 2;
  int32 postCode = 3;
}

message CreateUserModelRequestCustomer{
  string firstName = 2;
  string lastName = 3;
  AddressModelCustomer address = 4;
  int32 phoneNumber = 5;
  string email = 6;
}

message CreateCustomerRequest {
  CreateUserModelRequestCustomer user = 1;
  string preference = 2;
}

message CustomerResponse {
  UserModelResponseCustomer user = 1;
  string preference = 2;
}

service CustomerService {
  rpc createCustomer(CreateCustomerRequest) returns (CustomerResponse);
  rpc getCustomerById(CustomerRequest) returns (CustomerResponse);
  rpc deleteCustomerById(CustomerRequest) returns (CustomerResponse);
}